--- a/index.html
+++ b/index.html
@@ -4,14 +4,49 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;600;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
-  <title>Bootstrap page</title>
+  <title>Aliance Production</title>
 </head>
 <body>
 
+  <header class="header">
+    <nav class="navbar">
+      <a href="./" class="header-logo">
+        <img src="img/logo-light.svg" alt="Aliance Production" class="logo-light">
+      </a>
+      <ul class="header-nav">
+        <li class="header-nav-item"><a href="#" class="header-nav-link">О компании</a></li>
+        <li class="header-nav-item"><a href="#" class="header-nav-link">Контрактное производство</a></li>
+        <li class="header-nav-item"><a href="#" class="header-nav-link">Собственные торговые марки</a></li>
+        <li class="header-nav-item"><a href="#" class="header-nav-link">Новости</a></li>
+        <li class="header-nav-item"><a href="#" class="header-nav-link">Контакты</a></li>
+      </ul>
+
+      <div class="header-phone">
+        <img src="img/phone.svg" alt="" class="">
+        <a href="tel:+74996861014" class="header-phone-link">+7 (499) 686-10-14</a>
+      </div>
+      <!-- /.header-phone -->
+
+      <button class="header-button button">Получить консультацию</button>
+      <!-- /.header-button button -->
+
+
+
+    </nav>
+    <!-- /.navbar -->
+  </header>
+
+
+
+
+
+
   
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
   <script src="js/main.js"></script>
 </body>
 </html>
