--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 
-  <header class="header">
+  <header class="header header-image">
     <nav class="navbar">
       <a href="./" class="header-logo">
         <img src="img/logo-light.svg" alt="Aliance Production" class="logo-light">
