--- a/index.html
+++ b/index.html
@@ -31,14 +31,21 @@
         <a href="tel:+74996861014" class="header-phone-link">+7 (499) 686-10-14</a>
       </div>
       <!-- /.header-phone -->
-
       <button class="header-button button">Получить консультацию</button>
       <!-- /.header-button button -->
-
-
-
     </nav>
     <!-- /.navbar -->
+
+    <div class="container">
+      <div class="header-content">
+        <div class="seporator"></div>
+        <h1 class="header-title">Комплексное обеспечение товарами и расходными материалами бизнеса</h1>
+        <p class="header-text">Высокий уровень вовлечения представителей целевой аудитории является четким доказательством простого факта: высококачественный прототип будущего проекта напрямую зависит от анализа существующих паттернов поведения.</p>
+        <div class="button">Подробнее о компании</div>
+      </div>
+      <!-- /.header-content -->
+    </div>
+    <!-- /.container -->
   </header>
 
 
