--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <a href="tel:+74996861014" class="header-phone-link">+7 (499) 686-10-14</a>
       </div>
       <!-- /.header-phone -->
-      <button class="header-button button">Получить консультацию</button>
+      <button class="navbar-button button">Получить консультацию</button>
       <!-- /.header-button button -->
     </nav>
     <!-- /.navbar -->
@@ -44,6 +44,29 @@
         <div class="button">Подробнее о компании</div>
       </div>
       <!-- /.header-content -->
+      <ul class="header-features">
+        <li class="header-features-item">
+          <img src="./img/features/time.svg" alt="" class="header-features-icon">
+          <p class="header-features-text">Непрерывная работа c 2017 года</p>
+        </li>
+        <li class="header-features-item">
+          <img src="./img/features/sertificate.svg" alt="" class="header-features-icon">
+          <p class="header-features-text">Вся продукция сертифицирована</p>
+        </li>
+        <li class="header-features-item">
+          <img src="./img/features/control.svg" alt="" class="header-features-icon">
+          <p class="header-features-text">Контроль качества на всех этапах</p>
+        </li>
+        <li class="header-features-item">
+          <img src="./img/features/delivery.svg" alt="" class="header-features-icon">
+          <p class="header-features-text">Возможны поставки по всей России</p>
+        </li>
+        <li class="header-features-item">
+          <img src="./img/features/speed.svg" alt="" class="header-features-icon">
+          <p class="header-features-text">Оперативное производство</p>
+        </li>
+      </ul>
+      <!-- /.header-features -->
     </div>
     <!-- /.container -->
   </header>
